log/13-52-25-08-18-2017.log
********************************************

Server started at 13-52-25-08-18-2017
C:\Users\Steven\Google Drive\Projects\CesspoolBikes\routes\index.js:49
    Bike.find({"rider": {$or [{$eq: ""}, {$eq: null}]}}).sort({"location": 1, "name": 1}).exec(function(err, docs)
                             ^

SyntaxError: Unexpected token [
    at createScript (vm.js:74:10)
    at Object.runInThisContext (vm.js:116:10)
    at Module._compile (module.js:533:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Module.require (module.js:513:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Users\Steven\Google Drive\Projects\CesspoolBikes\server.js:107:14)
    at Module._compile (module.js:569:30)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
Server stopped at 13-52-25-08-18-2017

********************************************
